ent_conf = configuration_data()
ent_conf.set('PACKAGE', 'nimf')
ent_conf.set('PACKAGE_BUGREPORT', 'https://github.com/hamonikr/nimf')
ent_conf.set('PACKAGE_NAME', 'nimf')
ent_conf.set('PACKAGE_STRING', 'nimf')
ent_conf.set('PACKAGE_TARNAME', 'nimf-' + meson.project_version())
ent_conf.set('PACKAGE_URL', 'https://github.com/hamonikr/nimf')
ent_conf.set('PACKAGE_VERSION', meson.project_version())
ent_conf.set('PACKAGE_API_VERSION', meson.project_version())
configure_file(input: 'gtkdocentities.ent.in', output: 'gtkdocentities.ent', configuration: ent_conf)
